[package]
name = "reups"
version = "0.1.1"
authors = ["Nate Lust <nlust@astro.princeton.edu>"]
description = "A clean implementation of the eups package management system in rust"
repository = "https://github.com/natelust/reups"
readme = "README.md"
license = "Mozilla Public License 2.0"
license-file = "LICENSE"
categories = ["development-tools"]

[dependencies]
clap = "2.31.2"
regex = "0.2"
lazy_static = "1.0"
petgraph = "0.4.11"
fnv = "1.0.6"
