[package]
name = "reups"
version = "0.2.0"
authors = ["Nate Lust <nlust@astro.princeton.edu>"]
description = "A clean implementation of the eups package management system in rust"
repository = "https://github.com/natelust/reups"
readme = "README.md"
license = "MPL-2.0"
categories = ["development-tools"]

[dependencies]
clap = "2.32.0"
regex = "0.2"
lazy_static = "1.0"
petgraph = "0.4.11"
fnv = "1.0.6"
log = { version = "0.4", features = ["std", "serde"] }
