[package]
name = "reups"
version = "0.3.0"
authors = ["Nate Lust <nlust@astro.princeton.edu>"]
description = "A clean implementation of the eups package management system in rust"
repository = "https://github.com/natelust/reups"
readme = "README.md"
license = "MPL-2.0"
categories = ["development-tools"]
edition = "2018"

[[bin]]
name = "reups"
path = "src/main.rs"

[[bin]]
name = "posix2json"
path = "src/posix2json.rs"

[lib]
name = "reups_lib"
path = "src/lib.rs"

[dependencies]
clap = "2.32.0"
regex = "0.2"
lazy_static = "1.2.0"
petgraph = "0.4.13"
fnv = "1.0.6"
preferences = "^1.1.0"
dirs = "1.0.4"
log = { version = "0.4", features = ["std", "serde"] }
users = "0.8.1"
time = "^0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
fs2 = "0.4.3"
rust-crypto = "^0.2"
app_dirs = "^1.2"
